...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAddressActivity">

    <EditText
        android:id="@+id/AddressLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:ems="10"
        android:textIsSelectable="true"
        android:hint="Latitude with Direction"
...
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddressLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:textIsSelectable="true"
        android:ems="10"
        android:hint="Longitude with Direction"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/AddressLat"
        app:layout_constraintTop_toBottomOf="@+id/AddressLat" />

    <Button
        android:id="@+id/SaveAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="262dp"
        android:onClick="onSaveAClicked"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
...
