...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsLocationActivity">


    <EditText
        android:id="@+id/FriendsLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:ems="10"
        android:hint="Latitude with Direction"
        android:inputType="textPersonName"
...
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FriendsLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:textIsSelectable="true"
        android:hint="Longitude with Direction"
...
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FriendsLat" />

    <Button
        android:id="@+id/SaveFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="263dp"
        android:text="Save"
        android:onClick="onSaveFClicked"
        app:layout_constraintBottom_toBottomOf="parent"
...
