...
        android:id="@+id/orientationWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:text="Please Input 0 to 359 Degrees Orientation. Default is 0."
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/ParentLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setOrientation" />

    <Button
...
        android:id="@+id/ParentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="onParentsClicked"
        android:text="Set Parent's house Location"
        app:layout_constraintBottom_toTopOf="@+id/AddressLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AddressLocation"
        android:layout_width="wrap_content"
...
        android:text="Set My Address Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FriendLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="onFriendsClicked"
        android:text="Set My Friend's Location"
        app:layout_constraintEnd_toEndOf="parent"
...
